updated colors of navbar collapse TopNav component

--- a/client/sass/components/navigation/_top_nav.scss
+++ b/client/sass/components/navigation/_top_nav.scss
@@ -3,14 +3,19 @@
 .top-nav {
     .navbar-toggle {
         margin: 15px;
-        background: $green;
+        background: $grey;
+        border-color: $green;
 
         .icon-bar {
-            background: $black;
+            background: $green;
         }
 
         &:hover {
-            background: $blue;
+            border-color: $blue;
+
+            .icon-bar {
+                background: $blue;
+            }
         }
     }
 
