--- a/client/sass/components/navigation/_side_nav.scss
+++ b/client/sass/components/navigation/_side_nav.scss
@@ -5,7 +5,7 @@
     height: 100%;
     float: left;
     border-right: 1px solid $grey;
-    overflow: scroll;
+    overflow: visible;
 
     .side-link {
         * {
