--- a/client/sass/components/navigation/_top_nav.scss
+++ b/client/sass/components/navigation/_top_nav.scss
@@ -1,6 +1,14 @@
 @import '../../utils/variables';
 
 .top-nav {
+    a {
+        color: $white !important;
+    }
+
+    span {
+        color: $green !important;
+    }
+
     .navbar-toggle {
         margin: 15px;
         background: $grey;
