--- a/client/sass/style.scss
+++ b/client/sass/style.scss
@@ -7,3 +7,4 @@
 @import './components/search/seeking';
 @import './components/auth/sign_in';
 @import './components/auth/sign_up';
+@import './components/session/session';
