--- a/client/sass/components/_layout.scss
+++ b/client/sass/components/_layout.scss
@@ -10,7 +10,7 @@ body,
 html {
     height: 100%;
     position: relative;
-    // background-color: $black;
+    background-color: $black;
 }
 
 embed,
@@ -36,9 +36,12 @@ video {
 
     .main-content {
         height: 100%;
-        // color: $white;
+        color: $white;
         text-align: center;
         padding-top: 15px;
+        input, button {
+          color: $black;
+        }
     }
 }
 
